@@ -1,5 +1,11 @@
 2008-11-16  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/frontends/tinderbox.py: handle unicode errors with 'replace'
+	instead of 'xmlcharrefreplace' in tinderbox output.  (closes: #560579,
+	thanks Theppitak Karoonboonyanan for the debugging)
+
+2008-11-16  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/freedesktop-2.26.modules:
 	* modulesets/gnome-external-deps-2.26.modules: updated poppler to
 	0.10.1 and poppler-data to 0.2.1.
